<?xml version="1.0"?>
<resources>
    <string name="app_name">ADMAsset</string>
    <string name="menu_title">Committee : Menu</string>
    <string name="menu_btn1">Check Asset</string>
    <string name="menu_btn2">List of Asset</string>
    <string name="menu_btn3">Asset Report</string>
    <string name="logout">Logout</string>
    <string name="committee">Committee</string>
    <string name="waiting">Waiting Asset Report</string>
    <string name="waiting2">Select condition of list</string>
    <string name="select_workgroup">Select Workgroup from List</string>
    <string name="select_floor">Select Floor</string>
    <string name="select_room">Select Room</string>
    <string name="summary_title">Committee : Summary Report</string>
    <string name="listasset_title">Committee : List of Asset</string>
    <string name="sendmsg_note">NOTE : FOR THIS ASSET</string>

    <string name="no">No</string>
    <string name="assetNumber">Asset Number</string>
    <string name="assetName">Asset Name</string>
    <string name="organization">Organization</string>
    <string name="scan_code">SCAN CODE</string>
    <string name="Login">Login</string>
    <string name="Close">Close</string>
    <string name="checked">Checked</string>
    <string name="allasset">All asset</string>
    <string name="summary_showChecked">show checked asset</string>
    <string name="summary_showWaiting">show waiting to check</string>
    <string name="searchAsset">search Asset</string>
    <string name="index">Index</string>
    <string name="send">Send</string>
    <string name="Camera">Camera Scan</string>
    <string name="typing">Typing</string>
    <string name="choose">Please select a scan method.</string>
    <string name="newText">New Text</string>
    <string name="loding">Loading...</string>
    <string name="duplicateWorning">Duplicate Asset Number</string>
    <string name="duplicateWorningMsg1">Warning ... Recent entries will not save.</string>
    <string name="duplicateWorningMsg2">Because it has been scanned.</string>
    <string name="writecode">Please wirte your scan code.</string>
    <string name="notfoundMsg1">This item is Not Asset</string>
    <string name="notfoundMsg2">Warning Recent entries will not save.</string>
    <string name="notfoundMsg3">Because this is not asset.</string>
    <string name="Networkfail">Network communication failure</string>
    <string name="enterscancode">Please enter scan code</string>
</resources>