<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout tools:context=".WaitingAssetActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="#000"
            android:text="@string/committee"
            android:gravity="center"
            android:fontFamily="AppleSDGothicNeo-UltraLight"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="#000"
            android:text="@string/waiting"
            android:gravity="center"
            android:fontFamily="AppleSDGothicNeo-UltraLight"/>

    </LinearLayout>
    <Spinner
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:prompt="@string/select_workgroup"
        android:layout_marginTop="176dp"
        android:id="@+id/workgroupList"/>

    <Spinner
        android:id="@+id/floorList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/workgroupList"
        android:prompt="@string/select_floor" />

    <Spinner
        android:id="@+id/roomList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/floorList"
        android:prompt="@string/select_room" />


    <ImageButton
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/homeBtn"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/home"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:text="@string/waiting2"
        android:fontFamily="AppleSDGothicNeo-UltraLight"
        android:layout_marginTop="130dp"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>