<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout tools:context=".MenuActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="21sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/menu_title"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/menu_btn1"
            android:textAllCaps="false"
            android:background="#669B9B9B"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:id="@+id/checkAssetBtn"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/menu_btn2"
            android:textAllCaps="false"
            android:background="#669B9B9B"
            android:layout_marginBottom="30dp"
            android:onClick="onClick"
            android:id="@+id/listViewBtn"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/menu_btn3"
            android:textAllCaps="false"
            android:background="#669B9B9B"
            android:onClick="onClick"
            android:layout_marginBottom="30dp"
            android:id="@+id/assetReportBtn"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:background="#669B9B9B"
            android:layout_marginBottom="18dp"
            android:onClick="onClick"
            android:id="@+id/logOutBtn"/>

    </LinearLayout>

</RelativeLayout>