<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="302dp"
    android:layout_height="200sp"
    tools:context=".WritecodeDialogActivity"
    >
    <LinearLayout tools:context=".WritecodeDialogActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textSize="21sp"
            android:textColor="#000"
            android:layout_marginBottom="30sp"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <Button
            android:id="@+id/camerabtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Camera"
            android:backgroundTint="@color/maincolor"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_weight="5"
            android:textSize="14sp" />
        <Button
            android:id="@+id/typingbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/typing"
            android:layout_weight="5"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:backgroundTint="@color/maincolor"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>