<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclerViewActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/listasset_title"
            android:fontFamily="AppleSDGothicNeo-UltraLight"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_weight="0.6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:id="@+id/txtListSize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7.4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5.4"
            android:orientation="vertical"
            android:id="@+id/linearsize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#6fa0e9">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:padding="8dp"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assetNumber"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:padding="8dp"
                    android:layout_weight="3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assetName"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:padding="8dp"
                    android:layout_weight="3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organization"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:padding="8dp"
                    android:layout_weight="3"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerAssetList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/homeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/home" />

</LinearLayout>